# arducopter_smc_gazebo

dipl_smc/: CMakeLists.txt  package.xml
dipl_smc/launch/: spawn_3DR_Arducopter.launch
dipl_smc/urdf/: 3DR_Arducopter.urdf.xacro  3DR_Arducopter_base.urdf.xacro  multirotor_base.urdf.xacro
mav_control/: CMakeLists.txt
mav_control/config/: mav_control.yaml
mav_control/launch/: mav_control.launch
mav_control/src/: mav_vel_ref_pub.py  position_yaw_ctl.py  smc_DOB.py  smc_RIC.py  smc_basic_ctl.py
mav_gazebo_plugins/src/: gazebo_motor_model.cpp
